@@ -714,3 +714,4 @@ table.insert(tests, "two_parent_workspace_commands_that_fail")
 table.insert(tests, "two_parent_workspace_pluck")
 table.insert(tests, "two_parent_workspace_add_drop_rename")
 table.insert(tests, "two_parent_workspace_attrs")
+table.insert(tests, "two_parent_workspace_pivot_root")
